<resources>
    <string name="app_name">FTPClient</string>
    <string name="connect">Connect</string>
    <string name="server_address_hint">Server Address</string>
    <string name="download">Download</string>
    <string name="login">Log In</string>
    <string name="downloadLocal">Local File Name</string>
    <string name="downloadRemote">Remote File Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="upload">Upload</string>
    <string name="mode">Mode</string>
    <string name="logout">Log Out</string>
    <string name="stream">Stream Mode</string>
    <string name="block">Block Mode</string>
    <string name="compressed">Compressed Mode</string>
    <string name="modeTitle">Choose a mode</string>
    <string name="disConnect">Disconnect</string>
    <string name="conMode">Connection Mode</string>
    <string name="dataMode">Transfer Mode</string>
    <string name="char_type">Char Type</string>
    <string name="typeTitle">Choose a type</string>
    <string name="ascii">Ascii</string>
    <string name="binary">Binary</string>
    <string name="connTitle">Choose a connection mode</string>
    <string name="port">Port</string>
    <string name="passive">Passive</string>
    <string name="structure">Structure</string>
    <string name="structureTitle">Choose a structure</string>
    <string name="file">File</string>
    <string name="other">Other</string>
    <string name="testDownload">Test Download</string>
    <string name="testUpload">Test Upload</string>
    <string name="blockSize">Block Size</string>
    <string name="test">Test</string>
    <string name="information">Information</string>
    <string name="connModeInfo">Connection Mode</string>
    <string name="modeInfo">Mode</string>
    <string name="typeInfo">Type</string>
    <string name="struInfo">Structure</string>
    <string name="userInfo">User</string>
    <string name="ok">OK</string>
    <string name="anonymous">Anonymous</string>
</resources>