<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationActivity">

    <TextView
        android:id="@+id/connMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connModeInfo"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/connModeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="80dp" />

    <TextView
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modeInfo"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="130dp" />

    <TextView
        android:id="@+id/modeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="180dp" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeInfo"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="230dp" />

    <TextView
        android:id="@+id/typeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="280dp" />

    <TextView
        android:id="@+id/structure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/struInfo"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="330dp" />

    <TextView
        android:id="@+id/struInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="380dp" />

    <TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userInfo"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="430dp" />

    <TextView
        android:id="@+id/userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="480dp" />

    <Button
        android:id="@+id/okBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6F6F6F"
        android:gravity="center"
        android:text="@string/ok"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="550dp" />

</androidx.constraintlayout.widget.ConstraintLayout>